Working on fix for routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">
     <img src="assets/images/qurate-logo.png" width="100px" class="img-fluid" alt="qurate-logo">
@@ -33,4 +32,4 @@
   </li>
 </ul>
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
