--- a/src/app/pages/dependency-dash/dependency-dash.component.html
+++ b/src/app/pages/dependency-dash/dependency-dash.component.html
@@ -1,60 +1,3 @@
-<!-- Material form contact -->
-<mdb-card>
-
-  <mdb-card-header class="info-color white-text text-center py-4">
-    <h5>
-      <strong>Contact us</strong>
-    </h5>
-  </mdb-card-header>
-
-
-  <!--Card content-->
-  <mdb-card-body class="px-lg-5 pt-0">
-
-    <!-- Form -->
-    <form class="text-center" style="color: #757575;">
-
-      <!-- Name -->
-      <div class="md-form mt-3">
-        <input type="text" id="materialContactFormName" class="form-control" mdbInputDirective>
-        <label for="materialContactFormName">Name</label>
-      </div>
-
-      <!-- E-mail -->
-      <div class="md-form">
-        <input type="email" id="materialContactFormEmail" class="form-control" mdbInputDirective>
-        <label for="materialContactFormEmail">E-mail</label>
-      </div>
-
-      <!-- Subject -->
-      <span>Subject</span>
-      <div class="row">
-        <div class="col-md-12 mx-auto">
-          <mdb-select [options]="optionsSelect" placeholder="Choose your option"></mdb-select>
-        </div>
-      </div>
-
-      <!--Message-->
-      <div class="md-form">
-        <textarea type="text" id="materialContactFormMessage" class="form-control md-textarea" mdbInputDirective></textarea>
-        <label for="materialContactFormMessage">Message</label>
-      </div>
-
-      <!-- Copy -->
-      <div class="row">
-        <div class="col-md-6 mx-auto d-flex justify-content-center">
-          <mdb-checkbox>Send me a copy of this message</mdb-checkbox>
-        </div>
-      </div>
-
-      <!-- Send button -->
-      <button mdbBtn color="info" outline="true" rounded="true" block="true" class="z-depth-0 my-4 waves-effect" mdbWavesEffect
-        type="submit">Send</button>
-
-    </form>
-    <!-- Form -->
-
-  </mdb-card-body>
-
-</mdb-card>
-<!-- Material form contact -->
+<div>
+  test
+</div>
