Added page-templates page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="/">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" routerLink="/dependency">Dependencies</a>
+      <a class="nav-item nav-link" routerLink="/page-templates">Page Templates</a>
     </div>
   </div>
 </nav>
