Depdency dash WIP

--- a/src/app/pages/dependency-dash/dependency-dash.component.html
+++ b/src/app/pages/dependency-dash/dependency-dash.component.html
@@ -1,3 +1,31 @@
-<div>
-  test
+<div class="container-fluid">
+  <div class="form-group">
+    <label for="name">Dependency Name</label>
+    <input type="input" class="form-control" id="name" placeholder="Dependency Name">
+  </div>
+  <div class="form-group">
+    <label for="id">Dependency Id</label>
+    <input type="input" class="form-control" id="id" placeholder="Dependency Id">
+  </div>
+  <div class="form-group">
+    <label for="description">Dependency Description</label>
+    <input type="input" class="form-control" id="description" placeholder="Dependency Description">
+  </div>
+  <div class="form-group">
+    <label for="versionRange">Version Range</label>
+    <input type="input" class="form-control" id="versionRange" placeholder="Version Range">
+  </div>
+  <div class="form-group">
+    <label for="groupId">Group Id</label>
+    <input type="input" class="form-control" id="groupId" placeholder="Group Id">
+  </div>
+  <div class="form-group">
+    <label for="artifactId">Artifact Id</label>
+    <input type="input" class="form-control" id="artifactId" placeholder="Artifact Id">
+  </div>
+  <div class="form-group">
+    <label for="version">Version</label>
+    <input type="input" class="form-control" id="version" placeholder="Version">
+  </div>
+
 </div>
