--- a/src/app/pages/dependency-dash/dependency-dash.component.html
+++ b/src/app/pages/dependency-dash/dependency-dash.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div class="form-group">
     <label for="name">Dependency Name</label>
     <input type="input" class="form-control" id="name" placeholder="Dependency Name">
