--- a/src/app/pages/dependency-dash/dependency-dash.component.html
+++ b/src/app/pages/dependency-dash/dependency-dash.component.html
@@ -1,34 +1,63 @@
+<br/>
+<div>
+  <h1 align="center">Add Custom Dependency</h1>
+</div>
+<br/>
 <div class="container">
   <form (ngSubmit)="onSubmit()" #dependencyForm="ngForm">
-    <div class="form-group">
-      <label for="name">Dependency Name</label>
-      <input type="input" class="form-control" id="name" [(ngModel)]="dependency.name" name="name" placeholder="Dependency Name">
+    
+    <div class="row">
+      <div class="form-group col">
+        <label for="name">Dependency Name</label>
+        <input type="input" class="form-control" id="name" [(ngModel)]="dependency.name" name="name" placeholder="Dependency Name">
+      </div>
+
+      <div class="form-group col">
+        <label for="id">Dependency Id</label>
+        <input type="input" class="form-control" id="id" [(ngModel)]="dependency.id" name="id" placeholder="Dependency Id">
+      </div>
     </div>
-    <div class="form-group">
-      <label for="id">Dependency Id</label>
-      <input type="input" class="form-control" id="id" [(ngModel)]="dependency.id" name="id" placeholder="Dependency Id">
+
+    <div class="row">
+      <div class="form-group col">
+        <label for="description">Dependency Description</label>
+        <input type="input" class="form-control" id="description" [(ngModel)]="dependency.description" name="description"
+          placeholder="Dependency Description">
+      </div>
+
+      <div class="form-group col">
+        <label for="versionRange">Version Range</label>
+        <input type="input" class="form-control" id="versionRange" [(ngModel)]="dependency.versionRange" name="versionRange"
+          placeholder="Version Range">
+      </div>
     </div>
-    <div class="form-group">
-      <label for="description">Dependency Description</label>
-      <input type="input" class="form-control" id="description" [(ngModel)]="dependency.description" name="description" placeholder="Dependency Description">
+
+    <div class="row">
+      <div class="form-group col">
+        <label for="groupId">Group Id</label>
+        <input type="input" class="form-control" id="groupId" [(ngModel)]="dependency.groupId" name="groupId"
+          placeholder="Group Id">
+      </div>
+
+      <div class="form-group col">
+        <label for="artifactId">Artifact Id</label>
+        <input type="input" class="form-control" id="artifactId" [(ngModel)]="dependency.artifactId" name="artifactId"
+          placeholder="Artifact Id">
+      </div>
     </div>
-    <div class="form-group">
-      <label for="versionRange">Version Range</label>
-      <!-- <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel"> -->
-      <input type="input" class="form-control" id="versionRange" [(ngModel)]="dependency.versionRange" name="versionRange" placeholder="Version Range">
+
+    <div class="row">
+      <div class="form-group col">
+        <label for="version">Version</label>
+        <input type="input" class="form-control" id="version" [(ngModel)]="dependency.version" name="version"
+          placeholder="Version">
+      </div>
+
+      <div class="col">
+        <p></p>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="groupId">Group Id</label>
-      <input type="input" class="form-control" id="groupId" [(ngModel)]="dependency.groupId" name="groupId" placeholder="Group Id">
-    </div>
-    <div class="form-group">
-      <label for="artifactId">Artifact Id</label>
-      <input type="input" class="form-control" id="artifactId" [(ngModel)]="dependency.artifactId" name="artifactId" placeholder="Artifact Id">
-    </div>
-    <div class="form-group">
-      <label for="version">Version</label>
-      <input type="input" class="form-control" id="version" [(ngModel)]="dependency.version" name="version" placeholder="Version">
-    </div>
+
     <button type="submit" class="btn btn-primary" [disabled]="!dependencyForm.form.valid">Submit</button>
   </form>
 </div>
