Refactored page-templates page

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,29 +1,28 @@
 <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-4">Spring Initializr++ Dashboard</h1>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
+  <p>Add custom dependencies and create project templates.</p>
+  <!-- <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
+  </p> -->
 </div>
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
+          <h5 class="card-title">Create a project template</h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a routerLink="/page-templates" class="btn btn-primary">Go to Page Templates</a>
         </div>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
+          <h5 class="card-title">Add a custom dependency</h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a routerLink="/dependency" class="btn btn-primary">Go to Dependencies</a>
         </div>
       </div>
     </div>
