Updated layout in page templates

--- a/src/app/pages/page-templates/page-templates.component.html
+++ b/src/app/pages/page-templates/page-templates.component.html
@@ -1,7 +1,9 @@
+<br/>
+<h1 align="center">Project Template</h1>
+<br/>
 <div class="container">
   <form (ngSubmit)="onSubmit()" #dependencyForm="ngForm">
     <div class="form-group">
-      <h2>Project Template Name</h2>
       <label for="projectTemplateNm">Enter project name</label>
       <input class="form-control" id="projectTemplateNm" [(ngModel)]="projectTemplateData.projectTemplateNm" name="projectTemplateNm"
         placeholder="Project Template Name">
