--- a/src/app/pages/dependency-dash/dependency-dash.component.html
+++ b/src/app/pages/dependency-dash/dependency-dash.component.html
@@ -9,25 +9,25 @@
     <div class="row">
       <div class="form-group col">
         <label for="name">Dependency Name</label>
-        <input type="input" class="form-control" id="name" [(ngModel)]="dependency.name" name="name" placeholder="Dependency Name">
+        <input type="input" class="form-control" id="name" [(ngModel)]="dependency.name" name="name" placeholder="Dependency Name" required>
       </div>
 
       <div class="form-group col">
         <label for="id">Dependency Id</label>
-        <input type="input" class="form-control" id="id" [(ngModel)]="dependency.id" name="id" placeholder="Dependency Id">
+        <input type="input" class="form-control" id="id" [(ngModel)]="dependency.id" name="id" placeholder="Dependency Id" required>
       </div>
     </div>
 
     <div class="row">
       <div class="form-group col">
         <label for="description">Dependency Description</label>
-        <input type="input" class="form-control" id="description" [(ngModel)]="dependency.description" name="description"
+        <input type="input" class="form-control" id="description" [(ngModel)]="dependency.description" name="description" required
           placeholder="Dependency Description">
       </div>
 
       <div class="form-group col">
         <label for="versionRange">Version Range</label>
-        <input type="input" class="form-control" id="versionRange" [(ngModel)]="dependency.versionRange" name="versionRange"
+        <input type="input" class="form-control" id="versionRange" [(ngModel)]="dependency.versionRange" name="versionRange" required
           placeholder="Version Range">
       </div>
     </div>
@@ -35,13 +35,13 @@
     <div class="row">
       <div class="form-group col">
         <label for="groupId">Group Id</label>
-        <input type="input" class="form-control" id="groupId" [(ngModel)]="dependency.groupId" name="groupId"
+        <input type="input" class="form-control" id="groupId" [(ngModel)]="dependency.groupId" name="groupId" required
           placeholder="Group Id">
       </div>
 
       <div class="form-group col">
         <label for="artifactId">Artifact Id</label>
-        <input type="input" class="form-control" id="artifactId" [(ngModel)]="dependency.artifactId" name="artifactId"
+        <input type="input" class="form-control" id="artifactId" [(ngModel)]="dependency.artifactId" name="artifactId" required
           placeholder="Artifact Id">
       </div>
     </div>
@@ -49,7 +49,7 @@
     <div class="row">
       <div class="form-group col">
         <label for="version">Version</label>
-        <input type="input" class="form-control" id="version" [(ngModel)]="dependency.version" name="version"
+        <input type="input" class="form-control" id="version" [(ngModel)]="dependency.version" name="version" required
           placeholder="Version">
       </div>
 
